Shift to maven structure